update CI scripts

--- a/.github/workflows/vgm_player_build_and_package.yml
+++ b/.github/workflows/vgm_player_build_and_package.yml
@@ -23,23 +23,18 @@ jobs:
       - name: Check out VGM Player repo
         uses: actions/checkout@v4
         with:
-          path: VGM_Player
+          path: VGM_player
           submodules: false
 
       # ==== OS Specific Dependencies and GBDK package ====
-      # Decompress the gbdk contents into VGM_Player/gbdk
-      # Remove git repo files
+      # Decompress the gbdk contents
       - name: Linux Depends
         if: matrix.name == 'Linux-x64'
         run: |
-          cd VGM_Player
           curl -Lo gbdk.tar.gz https://github.com/gbdk-2020/gbdk-2020/releases/download/pre-release/gbdk-linux64.tar.gz
           tar xvfz gbdk.tar.gz
-          rm -f gbdk.tar.gz
           python -m pip install --upgrade Pillow
           python -m pip install --upgrade wave
-          rm -rf .git .gitignore .github
-          cd ..
 
       # ==== Pre-Build: Set environment vars ====
       # Needs to be in a separate step than build so that setting the environment var takes effect
@@ -55,7 +50,8 @@ jobs:
         if: (matrix.name == 'Linux-x64')
         shell: bash
         run: |
-          cd VGM_player/
+          export GBDK_HOME=`pwd`/gbdk/
+          cd VGM_player
           make
           cd ..
 
