switch to the latest ubuntu in the CI scripts

--- a/.github/workflows/vgm_player_build_and_package.yml
+++ b/.github/workflows/vgm_player_build_and_package.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: ubuntu-20.04
+          - os: ubuntu-latest
             name: Linux-x64
     steps:
 
